News UAT/force-app/main/default/objects/Topic_Data__c/Topic_Data__c.object-meta.xml
<CustomObject>
    <label>Topic Data</label>
    <nameField>
        <displayFormat>TDN-{0000}</displayFormat>
        <label>Topic Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Topics Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>