News UAT/force-app/main/default/objects/Topic_Data__c/fields/Completion_Status__c.field-meta.xml
<CustomField>
    <fullName>Completion_Status__c</fullName>
    <label>Completion Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>