News UAT/force-app/main/default/objects/Topic_Data__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Topics Data</relationshipLabel>
    <relationshipName>Topics_Data</relationshipName>
    <type>Lookup</type>
</CustomField>