News UAT/force-app/main/default/objects/Topic_Data__c/fields/Pillar_ID__c.field-meta.xml
<CustomField>
    <fullName>Pillar_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pillar ID</label>
    <referenceTo>Pillar__c</referenceTo>
    <relationshipLabel>Topics Data</relationshipLabel>
    <relationshipName>Topics_Data</relationshipName>
    <type>Lookup</type>
</CustomField>