News UAT/force-app/main/default/objects/Topic_Data__c/fields/Topic_ID__c.field-meta.xml
<CustomField>
    <fullName>Topic_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Topic ID</label>
    <referenceTo>Topic__c</referenceTo>
    <relationshipLabel>Topics Data</relationshipLabel>
    <relationshipName>Topics_Data</relationshipName>
    <type>Lookup</type>
</CustomField>