News UAT/force-app/main/default/objects/Topic_Data__c/fields/Topic_Name__c.field-meta.xml
<CustomField>
    <fullName>Topic_Name__c</fullName>
    <formula>Topic_ID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Topic Name</label>
    <type>Text</type>
</CustomField>